--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,3 +5,10 @@
 .draft{
     opacity: 0.5;
 }
+
+header{
+    min-height: 50vh;
+    max-height: 70vh;
+    background: url(http://www.visitnorwich.co.uk/assets/Uploads/Events-images/Theatre-generic.jpg) center center no-repeat;
+    background-size: cover;   
+}
