--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -60,7 +60,8 @@
         {{else}}
         <button class="btn btn-secondary" {{action "postToPublished" post}}>Publish</button>
         <button class="btn btn-danger" {{action "setDeletePost" post}}>Delete</button>
-        <button class="btn btn-primary" data-toggle="modal" data-target=".editModal" {{action "editPost" post}}>Edit</button>
+        {{#link-to "admin.edit" post.id class="btn btn-secondary" role="button" data-toggle="modal" data-target="#exampleModalLong" action=editPost}}Edit{{/link-to}}
+
         {{/if}}
 
         {{/if}}
@@ -72,38 +73,7 @@
     </tbody>
 </table>
 
-<div class="modal fade editModal" tabindex="-1" role="dialog" aria-labelledby="editModal" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      ...
-    </div>
-  </div>
-</div>
     
 </div>
 
-
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+{{outlet}}
