--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,21 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        {{link-to 'Posts' 'posts' class="nav-link"}}
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            {{link-to 'Admin' 'admin' class="nav-link btn btn-outline-primary" role=button}}
+        </li>
+    </ul>
+  </div>
+</nav>
+
 {{outlet}}
