--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,10 +1,16 @@
+<div class="container-fluid p-0">
+    <header class="">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="my-5 pt-5 text-white">{{model.title}}</h1>
+            </div>
+        </div>
+    </header>
+</div>
 <div class="container">
-<div class="row">
-<div class="col-md">
-
-<p>Here's a great post</p>
-    <h1>{{post.title}}</h1>
-    <h1>{{post.content}}</h1>
-</div>
-</div>
+            <div class="row">
+            <div class="col-md-8">
+                <p class="mt-5">{{markdown-to-html model.content}}</p>
+            </div>
+        </div>
 </div>
