--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid p-0">
-    <header class="">
+    <header class="post-header" style="background-image:url({{model.featured_image}});">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <h1 class="my-5 pt-5 text-white">{{model.title}}</h1>
