--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,3 +17,8 @@
     background: center center no-repeat;
     background-size: cover;
 }
+
+.link-helper i{
+  font-size: 1em;
+  margin-left: .5em;
+}
