--- a/app/templates/admin/edit.hbs
+++ b/app/templates/admin/edit.hbs
@@ -12,6 +12,11 @@
         {{input value=model.title class="form-control my-3"}}
         {{input value=model.featured_image class="form-control my-3"}}
         {{textarea value=model.content class="form-control my-3" cols="80" rows="6"}}
+        <label for="isFeatured">Is this post featured?</label>
+        {{input type="checkbox" name="featured_post" checked=model.featured_post}}
+        {{#if featured_post}}
+        <p>This is a featured post!</p>
+        {{/if}}
       </div>
       <div class="modal-footer">
         <button type="button" {{action "cancelEdit" model}} class="btn btn-secondary" data-dismiss="modal">Close</button>
