--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,6 +9,9 @@
       <li class="nav-item">
         {{link-to 'Posts' 'posts' class="nav-link"}}
       </li>
+      <li class="nav-item">
+        {{link-to 'Featured Posts' 'featured' class="nav-link"}}
+      </li>
     </ul>
     <ul class="navbar-nav">
         <li class="nav-item active">
