Creating components and helpers

--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-5">
     <div class="col-md">
-      <p>You have {{totalPosts}} posts.</p>
+      <p>You have {{publishedPosts}} posts.</p>
       {{#link-to "admin.create" class="btn btn-primary float-right"}}Create a New Post{{/link-to}}
       {{outlet}}
     </div>
