--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -2,15 +2,14 @@
     <header class="post-header" style="background-image:url({{model.featured_image}});">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <h1 class="my-5 pt-5 text-white">{{model.title}}</h1>
+                <h1 class="my-5 pt-5 text-white">{{model.title}} {{#if model.featured_post}} <span class="badge badge-primary">Featured</span>{{/if}}</h1>
+                {{share-post postTitle=model.title}}
             </div>
         </div>
     </header>
-</div>
-<div class="container">
-            <div class="row">
-            <div class="col-md-8">
-                <p class="mt-5">{{markdown-to-html model.content}}</p>
-            </div>
-        </div>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+          <p class="mt-5">{{markdown-to-html model.content}}</p>
+      </div>
+    </div>
 </div>
