--- a/app/templates/featured.hbs
+++ b/app/templates/featured.hbs
@@ -8,7 +8,7 @@
   <div class="row justify-content-left">
         {{#each featuredPosts as |post|}}
         <div class="col-md-4">
-          {{post-card featured_image=post.featured_image route=post title=post.title created_at=post.created_at content=post.content}}
+          {{post-card post.featured_image post post.title post.created_at post.content}}
         </div>
         {{/each}}
   </div>
